<resources>
    <string name="app_name">Bitcoin Ticker</string>
    <string name="loodos">Loodos</string>
    <string name="market_fragment">Market</string>
    <string name="my_coins_fragment">My Coins</string>
    <string name="settings_fragment">Settings</string>
    <string name="pref_welcome_title">WELCOME TO \nBITCOIN TICKER</string>
    <string name="pref_sub_title">To get started, select your preferences:</string>
    <string name="pref_default_lang">Default Language</string>
    <string name="pref_default_currency">Default Currency</string>
    <string name="pref_start_btn">Start</string>
    <string name="title">Title</string>

    <string name="coin_table_hashtag">#</string>
    <string name="coin_table_coin">COIN</string>
    <string name="coin_table_price">PRICE</string>
    <string name="coin_table_hour">24H</string>
    <string name="coin_table_market_cap">MARKET CAP</string>

    <string name="price_change_percentage_24h">Price Change Percentage 24h In</string>
    <string name="description">Description</string>
    <string name="current_price">Current Price</string>
    <string name="hash_algorithm">Hash Algorithm</string>

    <string name="to_search">Ara</string>
    <string name="refresh_interval">Refresh Interval</string>

    <string name="login_title">Login</string>
    <string name="login_subtitle">Signin to your account to continue</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password ?</string>
    <string name="login_bottom_right">Login now</string>
    <string name="login_bottom_left">Already a user?</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="dont_have_account">Don\'t Have Account</string>
    <string name="register_now">Register Now</string>
    <string name="register_sub_title">Signup for a new account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>

    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="user_email">Email:</string>
    <string name="confirm_btn">Confirm</string>

    <string name="detail_up_to_date">Last Updated Date</string>
</resources>