<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/marketFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:menuCategory="secondary"
        android:title="@string/market_fragment"
        android:titleCondensed=""
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/myCoinsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:menuCategory="secondary"
        android:title="@string/my_coins_fragment"
        android:titleCondensed=""
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:menuCategory="secondary"
        android:title="@string/settings_fragment"
        android:titleCondensed=""
        app:showAsAction="ifRoom|withText" />

</menu>