<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.mehmetbalbay.bitcointicker.view.ui.prefscreen.PrefScreenViewModel" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_back_color">

        <LinearLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/pref_icon" />

            <com.mehmetbalbay.bitcointicker.view.ui.customview.TextViewWithFontBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pref_welcome_title"
                android:textColor="@color/black_text"
                android:textSize="36sp" />

            <com.mehmetbalbay.bitcointicker.view.ui.customview.TextViewWithFont
                android:id="@+id/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="24dp"
                android:text="@string/pref_sub_title"
                android:textColor="@color/black_text"
                android:textSize="16sp" />


            <com.mehmetbalbay.bitcointicker.view.ui.customview.TextViewWithFontBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_default_lang"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/defaultLanguageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent" />

            <com.mehmetbalbay.bitcointicker.view.ui.customview.TextViewWithFontBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pref_screen_currency_spinner_margin_top"
                android:text="@string/pref_default_currency"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/defaultCurrencySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent" />

            <Button
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="36dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/pref_start_btn"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</layout>