<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="signUpViewModel"
            type="com.mehmetbalbay.bitcointicker.view.ui.auth.AuthViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_back_dark_color"
        android:orientation="vertical"
        tools:context=".view.ui.auth.SignupActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="46dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/register_btn"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/register_sub_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearly"
            android:layout_marginStart="@dimen/register_login_input_start_end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/register_login_input_start_end"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="bottom"
                android:visibility="gone"
                app:boxBackgroundColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/colorAccent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sgnEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@{signUpViewModel.email}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/colorAccent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sgnPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text="@{signUpViewModel.password}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/colorAccent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sgnConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@{signUpViewModel.confirmPassword}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_container"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/button_gradient"
            android:padding="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottomtextly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerBtn"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alreadyuser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/login_bottom_left"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/loginnow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginnow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/login_bottom_right"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/alreadyuser"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </RelativeLayout>
</layout>