<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="authViewModel"
            type="com.mehmetbalbay.bitcointicker.view.ui.auth.AuthViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentBottom="true"
            android:background="@color/fragment_back_dark_color"
            android:orientation="vertical"
            tools:context=".view.ui.auth.LoginActivity">

            <LinearLayout
                android:id="@+id/linearly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/login_subtitle"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/register_login_input_start_end"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="@dimen/register_login_input_start_end"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearly">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    app:boxBackgroundColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearly">


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:text="@={authViewModel.email}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="bottom"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/emailWrapper"
                    app:layout_constraintStart_toStartOf="@+id/emailWrapper"
                    app:layout_constraintTop_toBottomOf="@+id/emailWrapper">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:text="@={authViewModel.password}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_gradient"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="@+id/input_container"
                app:layout_constraintStart_toStartOf="@+id/input_container"
                app:layout_constraintTop_toBottomOf="@+id/forgettext">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/login_btn"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomtextly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn">

                <TextView
                    android:id="@+id/alreadyuser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/dont_have_account"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@+id/signUp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/register_now"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/alreadyuser"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>
