<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mehmetbalbay.bitcointicker.view.ui.main.MainActivityViewModel" />

        <variable
            name="coinsMarketsAdapter"
            type="com.mehmetbalbay.bitcointicker.view.adapter.coinsmarkets.CoinsMarketsAdapter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_back_dark_color"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableCoins"
            android:layout_width="match_parent"
            android:layout_height="@dimen/market_tab_height"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/coin_table_hashtag"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewWithFontBold"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="#" />

            <com.mehmetbalbay.bitcointicker.view.ui.customview.TextViewWithFontBold
                android:id="@+id/textViewWithFontBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/coin_table_coin"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewWithFontBold2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="COIN" />

            <com.mehmetbalbay.bitcointicker.view.ui.customview.TextViewWithFontBold
                android:id="@+id/textViewWithFontBold2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/coin_table_price"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewWithFontBold3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textViewWithFontBold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="PRICE" />

            <com.mehmetbalbay.bitcointicker.view.ui.customview.TextViewWithFontBold
                android:id="@+id/textViewWithFontBold3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/coin_table_hour"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewWithFontBold4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textViewWithFontBold2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="24H" />

            <com.mehmetbalbay.bitcointicker.view.ui.customview.TextViewWithFontBold
                android:id="@+id/textViewWithFontBold4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:text="@string/coin_table_market_cap"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textViewWithFontBold3"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="MARKET CAP" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/coinsRecycler"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_below="@+id/tableCoins"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            tools:visibility="visible"
            app:adapter="@{coinsMarketsAdapter}"
            app:adapterCoinsMarkets="@{viewModel.coinsMarketsLiveData}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_coin" />

        <ProgressBar
            android:id="@+id/coinsProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone" />

    </RelativeLayout>
</layout>